# langchain-chatbot

./: .env.example  .gitignore  README.md  config.yaml  logging.yaml  pyproject.toml
backend/: __init__.py  deps.py  main.py  schemas.py
backend/routers/: __init__.py  chat.py  export.py  models.py  presets.py  search.py  sessions.py  users.py
config/: logging.yaml  presets.yaml
config/envs/: development.yaml  production.yaml  testing.yaml
docs/: configuration.md  git_flow.md  workflow_log.md
frontend/: __init__.py  api_client.py  app.py
scripts/: check_project_config.py  init_db.py  test_chat_engine.py  test_file_backend.py  test_logging.py  test_mysql_backend.py
src/: __init__.py  main.py
src/core/: __init__.py  chat_engine.py  config_manager.py  model_manager.py  preset_manager.py  session_manager.py  user_manager.py
src/interface/: __init__.py  ui_protocol.py
src/models/: __init__.py  schemas.py
src/storage/: __init__.py  base.py  factory.py  file_backend.py  mysql_backend.py  sqlite_backend.py
src/ui/: __init__.py
src/ui/tui/: __init__.py  app.py  chat_view.py  menu_view.py  widgets.py
src/utils/: __init__.py  logger.py
tests/: __init__.py  conftest.py  test_api.py  test_chat_engine.py  test_config_manager.py  test_session_manager.py  test_storage.py  test_user_manager.py
